# OddsGetter

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
.github/workflows/: docker-image.yml
mysql-init/: dump.sql
src/: DatabaseManager.hpp  EnvManager.hpp  JSONdataExtactor.hpp  JSONparser.hpp  main.cpp
